#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
################################################################


2013-01-02  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999961 released.

        * More code to attempt to fix Firefox download.


2013-01-02  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999960 released.

        * More code to attempt to fix Firefox download.


2013-01-02  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999959 released.

        * More code to attempt to fix Firefox download.


2013-01-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999958 released.

        * Happy New Year!

        * Updated Makefile.PL to correct Firefox install code
          in Makefile.PL.


2013-01-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999957 released.

        * Happy New Year!

        * Updated Makefile.PL to correct mode setting code in
          FA_Core.pm.


2012-12-31  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999956 released.

        * Updated Makefile.PL to modify mode setting in
          FA_Core.pm.


2012-12-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999955 released.

        * Created variable in FA_Core.pm to hold mode setting.


2012-12-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999954 released.

        * Fixed permissions with password db files.


2012-12-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999953 released.

        * Fixed permissions when making dirs. With cygwin
          mkdir, -p cannot be used with -m.
