@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 c6dd9088c278b3cefa12da35ebfdd71e48b63091 ChangeLog
+SHA1 91784fdd2ab362b90a4dc97bc5445c72e95e3231 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 d910f2158f397101c20143f72890951dbff888b5 MANIFEST
-SHA1 8e59ebcfbb93077a9cd7e25294a2860c0b9738e0 META.yml
-SHA1 fee86c823d1d0a80c0626fe7ea2f5be67714e0cb MYMETA.json
-SHA1 2eb46b691219ae5c02172a559e0289a4db1ac0b3 MYMETA.yml
-SHA1 34d261b8e11f5fe7d6b7461fef2d39346aab5466 Makefile.PL
+SHA1 6a9e98f8601985e05f67deb85094bc080ec9d31f META.yml
+SHA1 441d393fb90384af6f6c6d6d4897b19e9fa15e7a MYMETA.json
+SHA1 6db5d811aa86a1f07b7bb918db305981746f35f9 MYMETA.yml
+SHA1 0bbd6c08d3fcb2a3cff19605fec0ab1a1822c8db Makefile.PL
 SHA1 cbcb130fc9fe3f4d4dd8263e7b4ee4b39b182bd1 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 39cf02b95d140e1dd95b4c7486b225f29eacb90a bin/fullauto.pl
@@ -39,7 +39,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 f1dd82c16fc6894c7949d64c481782cfed7a59b0 install_mozrepl_plugin.ahk
-SHA1 4297615ac8fc8de5565347b3dd9652fe32b86d5f lib/Net/FullAuto.pm
+SHA1 bf069fe11ee89aef862ea1397c7ac368a24fce17 lib/Net/FullAuto.pm
 SHA1 8a710a48bb21aa584949dbbe3649c0d5b2b084fc lib/Net/FullAuto/Custom/BackUp/README
 SHA1 b9b90c2707951d9d5753dc9ef9699abe7daddee9 lib/Net/FullAuto/Custom/README
 SHA1 b2282d66e77abab818cb5c894e164f82db09b720 lib/Net/FullAuto/Distro/fa_code.pm
@@ -56,7 +56,7 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.12 (Cygwin)
 
-iEYEARECAAYFAlDkchAACgkQJM3IZYB6aOrBKACgrXgYZ4wvU28eEMIOFlgtvx3C
-Wx0AoIPkEfqSL5JiA6jHkgGG0iBtvE5n
-=VS7h
+iEYEARECAAYFAlDm4EQACgkQJM3IZYB6aOp8IgCcD3YdKrwjpe+zUsFSiyXLEmNI
+Vm4An0A4QCENZSC823xFZVpucDyI2mfu
+=f3wL
 -----END PGP SIGNATURE-----
