@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.999961';
+our $VERSION='0.999962';
 
 
 use 5.005;
